Static page complete up to reviews section

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
               <li>WordPress, the premier free open-source bloggin utility, has gone through several upgrades in its life.</li>
             </ul>
           </li>
-
         </ul>
+
       </div>
     </div>
 
@@ -120,6 +120,61 @@
         <p class="sub-heading">
           Having used discount toner cartridges for twenty years, there have been a lot of changes in the toner cartridge market. The market today is approximately a twenty billion dollar business.
         </p>
+
+        <ul>
+          <li class="products-col-4">
+            <ul>
+              <li>
+                <img class="product-circles" src="assets/thumb-copy.png">
+              </li>
+              <li class="results-col-title">APP MAINTENANCE</li>
+              <li>by</li>
+              <li>Lida Morrison, Nettie Burke</li>
+              <li><button>REVIEW</button></li>
+            </ul>
+          </li>
+
+          <li class="products-col-4">
+            <ul>
+              <li>
+                <img class="product-circles" src="assets/thumb-copy-4.png">
+              </li>
+              <li class="results-col-title">FTA KEYS</li>
+              <li>by</li>
+              <li>Ivan Alexander, Steven Soto, Clifford Hammond</li>
+              <li><button>REVIEW</button></li>
+            </ul>
+          </li>
+
+          <li class="products-col-4">
+            <ul>
+              <li>
+                <img class="product-circles" 
+                     src="assets/thumb-copy-3.png">
+              </li>
+              <li class="results-col-title">
+                SMART WATCH
+              </li>
+              <li>by</li>
+              <li>Trevor James, Carl Stevenson</li>
+              <li><button>REVIEW</button></li>
+            </ul>
+          </li>
+
+          <li class="products-col-4">
+            <ul>
+              <li>
+                <img class="product-circles" 
+                     src="assets/thumb-copy-2.png">
+              </li>
+              <li class="results-col-title">WATCH APPS</li>
+              <li>by</li>
+              <li>Glen Snyder, Andrew Goodwin, Lida Morrison</li>
+              <li><button>REVIEW</button></li>
+            </ul>
+          </li>
+        </ul>
+
       </div>
     </div>
 
