updated phone styling for 961 px break point

--- a/index.html
+++ b/index.html
@@ -178,6 +178,27 @@
       </div>
     </div>
 
+    <div id="start-selling">
+      <h3>Start Selling Instantly</h3>
+        <p class="sub-heading">
+          Start Selling With Your Pre-paid account.
+        </p>
+        <p class="sub-heading">
+          No deposit needed.
+        </p>
+        <input type="email" name="signup-email">
+        <button>REGISTER</button>
+    </div>
+
+    <div id="people-say">
+      <h3>What People Say</h3>
+      
+    </div>
+
+    <div id="get-in-touch"></div>
+
+    <footer></footer>
+
   </div> <!-- APP -->
 <!--   <script src="jQuery Source CDN"></script> -->
   <script src="index.js"></script>
