Updates to styling for carousel

--- a/index.html
+++ b/index.html
@@ -99,12 +99,24 @@
         <img class="yellow-quote" 
              src="assets/quote-fat-yellow.png" 
              alt="Image of a quotation mark.">
-        <ul class="client-quote">
-          <li class="arrows"><img src="assets/arrow-left.png"></li>
-          <li class="text-white">Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more</li>
-          <li class="arrows"><img src="assets/arrow-right.png"></li>
-        </ul>
-        <div class="client-info">
+        <div class="client-quote">
+          <div class="arrows">
+            <button class="client-button">
+              <img src="assets/arrow-left.png">
+            </button>
+          </div>
+
+          <ul class="carousel">
+            <li class="text-white">Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more</li>
+          </ul>
+
+          <div class="arrows">
+            <button class="client-button">
+              <img src="assets/arrow-right.png">
+            </button>
+          </div>        
+
+          <div class="client-info">
           <img src="assets/client.png">
           <ul>
             <li class="text-yellow">Ophelia Holland</li>
@@ -112,6 +124,7 @@
           </ul>
         </div>
       </div>
+    </div>
     </div>
 
     <div id="recent-products">
