Work in progress

--- a/index.html
+++ b/index.html
@@ -94,35 +94,56 @@
     </div>
 
     <div id="clients-say">
+
       <div id="inner-clients-say">
+
         <h3 class="text-white">What Clients are saying</h3>
+
         <img class="yellow-quote" 
              src="assets/quote-fat-yellow.png" 
              alt="Image of a quotation mark.">
+        
         <div class="client-quote">
+          
           <div class="arrows">
             <button class="client-button">
               <img src="assets/arrow-left.png">
             </button>
           </div>
 
-          <ul class="carousel">
-            <li class="text-white">Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more</li>
-          </ul>
+          <div class="client-text" class="carousel">
+            <div class="text-white">
+              Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more
+            </div>
+
+            <div class="client-info">
+              <img src="assets/client.png">
+              <div>
+                <p class="text-yellow">Ophelia Holland</p>
+                <p class="text-white">@ophelia_holland</p>
+              </div>
+            </div>
+          </div>
+
+<!--           <div class="client-text carousel hidden">
+            <div class="text-white">
+              Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf moon cliche beard, tilde brunch celiac swag ramps kickstarter roof party. 
+            </div>
+
+            <div class="client-info">
+              <img src="assets/client.png">
+              <div>
+                <p class="text-yellow">Mallerie Shirley</p>
+                <p class="text-white">@mallerie_shirley</p>
+              </div>
+            </div>
+          </div> -->
 
           <div class="arrows">
             <button class="client-button">
               <img src="assets/arrow-right.png">
             </button>
           </div>        
-
-          <div class="client-info">
-          <img src="assets/client.png">
-          <ul>
-            <li class="text-yellow">Ophelia Holland</li>
-            <li class="text-white">@ophelia_holland</li>
-          </ul>
-        </div>
       </div>
     </div>
     </div>
