What clients are saying carousel working

--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
         <div class="client-quote">
           
           <div class="arrows">
-            <button class="client-button">
+            <button onclick="clientsSay.prev()" 
+                    class="client-button">
               <img src="assets/arrow-left.png">
             </button>
           </div>
 
-          <div class="client-text" class="carousel">
+          <div class="carousel client-text">
             <div class="text-white">
               Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more
             </div>
@@ -125,7 +126,7 @@
             </div>
           </div>
 
-<!--           <div class="client-text carousel hidden">
+          <div class="carousel client-text">
             <div class="text-white">
               Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf moon cliche beard, tilde brunch celiac swag ramps kickstarter roof party. 
             </div>
@@ -137,10 +138,24 @@
                 <p class="text-white">@mallerie_shirley</p>
               </div>
             </div>
-          </div> -->
+          </div>
+
+          <div class="carousel client-text">
+            <div class="text-white">
+              Pig nulla cillum pastrami. Exercitation leberkas burgdoggen laboris shank ut shankle. Velit ground round bresaola, lorem enim pancetta burgdoggen sausage pork belly t-bone. Veniam t-bone short ribs ipsum shankle sirloin short loin eiusmod turducken venison elit ex mollit. Cow ex sed velit ut cupidatat boudin ea laboris.
+            </div>
+
+            <div class="client-info">
+              <img src="assets/client.png">
+              <div>
+                <p class="text-yellow">Alexander Hamilton</p>
+                <p class="text-white">@Ham4Ham</p>
+              </div>
+            </div>
+          </div>
 
           <div class="arrows">
-            <button class="client-button">
+            <button onclick="clientsSay.next()" class="client-button">
               <img src="assets/arrow-right.png">
             </button>
           </div>        
