Custom styling to radio buttons

--- a/index.html
+++ b/index.html
@@ -243,11 +243,38 @@
       <div id="inner-people-say">
         <h3>What People Say</h3>
         <div class="carousel-wrapper-two">  <!-- class="carousel" -->
-          <div class="people-say-item people-1"></div>
-          <div class="people-say-item people-2"></div>
+          <div class="people-say-item people-1">
+            <img src="assets/quote-dark-gray.png">
+            <p>It is not because things are difficult that we do not dare;</p>
+            <p>It is because we do not dare that they are difficult.</p>
+            <p>Seneca the Younger</p>
+            <p>Editor in okodesign.net</p>
+            <img src="assets/person-1.png">
+          </div>
+
+          <div class="people-say-item people-2">
+            <img src="assets/quote-light-gray.png">
+            <p>Attending a trade show can be a very effective method</p>
+            <p>of promoting your company and its products.</p>
+            <p>Rachel Moreno</p>
+            <p>Lead Designer in okodesign.net</p> 
+            <img src="assets/person-2.png">
+          </div>
         </div>
+
         <div class="carousel-radio">
-          
+          <span>
+            <input id="0" type="radio" name="people-say-carousel">
+            <label for="0"></label>
+          </span>
+          <span>
+            <input id="1" type="radio" name="people-say-carousel">
+            <label for="1"></label>
+          </span>
+          <span>
+            <input id="2" type="radio" name="people-say-carousel">
+            <label for="2"></label>
+          </span>
         </div>
         
       </div>
