--- a/index.html
+++ b/index.html
@@ -112,44 +112,46 @@
             </button>
           </div>
 
-          <div class="carousel client-text">
-            <div class="text-white">
-              Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more
-            </div>
+          <div id="clients-carousel">
+            <div class="carousel client-text">
+              <div class="text-white">
+                Businesses at present had creatively generated effective advertising campaigns in the form of audio visual media that includes the television and radios and the print media that cover the newspaper and campaign materials like the posters, brochures, business cards, flyer and many more
+              </div>
 
-            <div class="client-info">
-              <img src="assets/client.png">
-              <div>
-                <p class="text-yellow">Ophelia Holland</p>
-                <p class="text-white">@ophelia_holland</p>
+              <div class="client-info">
+                <img src="assets/client.png">
+                <div>
+                  <p class="text-yellow">Ophelia Holland</p>
+                  <p class="text-white">@ophelia_holland</p>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="carousel client-text">
-            <div class="text-white">
-              Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf moon cliche beard, tilde brunch celiac swag ramps kickstarter roof party. 
-            </div>
+            <div class="carousel client-text">
+              <div class="text-white">
+                Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf moon cliche beard, tilde brunch celiac swag ramps kickstarter roof party. 
+              </div>
 
-            <div class="client-info">
-              <img src="assets/client.png">
-              <div>
-                <p class="text-yellow">Mallerie Shirley</p>
-                <p class="text-white">@mallerie_shirley</p>
+              <div class="client-info">
+                <img src="assets/client.png">
+                <div>
+                  <p class="text-yellow">Mallerie Shirley</p>
+                  <p class="text-white">@mallerie_shirley</p>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="carousel client-text">
-            <div class="text-white">
-              Pig nulla cillum pastrami. Exercitation leberkas burgdoggen laboris shank ut shankle. Velit ground round bresaola, lorem enim pancetta burgdoggen sausage pork belly t-bone. Veniam t-bone short ribs ipsum shankle sirloin short loin eiusmod turducken venison elit ex mollit. Cow ex sed velit ut cupidatat boudin ea laboris.
-            </div>
+            <div class="carousel client-text">
+              <div class="text-white">
+                Pig nulla cillum pastrami. Exercitation leberkas burgdoggen laboris shank ut shankle. Velit ground round bresaola, lorem enim pancetta burgdoggen sausage pork belly t-bone. Veniam t-bone short ribs ipsum shankle sirloin short loin eiusmod turducken venison elit ex mollit. Cow ex sed velit ut cupidatat boudin ea laboris.
+              </div>
 
-            <div class="client-info">
-              <img src="assets/client.png">
-              <div>
-                <p class="text-yellow">Alexander Hamilton</p>
-                <p class="text-white">@Ham4Ham</p>
+              <div class="client-info">
+                <img src="assets/client.png">
+                <div>
+                  <p class="text-yellow">Alexander Hamilton</p>
+                  <p class="text-white">@Ham4Ham</p>
+                </div>
               </div>
             </div>
           </div>
@@ -242,37 +244,93 @@
     <div id="people-say">
       <div id="inner-people-say">
         <h3>What People Say</h3>
-        <div class="carousel-wrapper-two">  <!-- class="carousel" -->
-          <div class="people-say-item people-1">
-            <img src="assets/quote-dark-gray.png">
-            <p>It is not because things are difficult that we do not dare;</p>
-            <p>It is because we do not dare that they are difficult.</p>
-            <p>Seneca the Younger</p>
-            <p>Editor in okodesign.net</p>
-            <img src="assets/person-1.png">
+
+        <div id="people-carousel">
+          <div class="carousel-wrapper-two carousel"> 
+            <div class="people-say-item people-1">
+              <img src="assets/quote-dark-gray.png"
+                   class="center-quote">
+              <p>It is not because things are difficult that we do not dare;</p>
+              <p>It is because we do not dare that they are difficult.</p>
+              <p>Mallerie Shirley</p>
+              <p>Editor in okodesign.net</p>
+              <img src="assets/person-1.png"
+                   class="person-img">
+            </div>
+
+            <div class="people-say-item people-2">
+              <img src="assets/quote-light-gray.png"
+                   class="center-quote">
+              <p>Attending a trade show can be a very effective method</p>
+              <p>of promoting your company and its products.</p>
+              <p>Rachel Moreno</p>
+              <p>Lead Designer in okodesign.net</p> 
+              <img src="assets/person-2.png"
+                   class="person-img">
+            </div>
           </div>
 
-          <div class="people-say-item people-2">
-            <img src="assets/quote-light-gray.png">
-            <p>Attending a trade show can be a very effective method</p>
-            <p>of promoting your company and its products.</p>
-            <p>Rachel Moreno</p>
-            <p>Lead Designer in okodesign.net</p> 
-            <img src="assets/person-2.png">
+          <div class="carousel-wrapper-two carousel">
+            <div class="people-say-item people-1">
+              <img src="assets/quote-dark-gray.png"
+                   class="center-quote">
+              <p>It is not because things are difficult that we do not dare;</p>
+              <p>It is because we do not dare that they are difficult.</p>
+              <p>Seneca the Younger</p>
+              <p>Editor in okodesign.net</p>
+              <img src="assets/person-1.png"
+                   class="person-img">
+            </div>
+
+            <div class="people-say-item people-2">
+              <img src="assets/quote-light-gray.png"
+                   class="center-quote">
+              <p>Attending a trade show can be a very effective method</p>
+              <p>of promoting your company and its products.</p>
+              <p>Alexander Hamilton</p>
+              <p>Lead Designer in okodesign.net</p> 
+              <img src="assets/person-2.png"
+                   class="person-img">
+            </div>
           </div>
+
+          <div class="carousel-wrapper-two carousel">
+            <div class="people-say-item people-1">
+              <img src="assets/quote-dark-gray.png"
+                   class="center-quote">
+              <p>It is not because things are difficult that we do not dare;</p>
+              <p>It is because we do not dare that they are difficult.</p>
+              <p>Heather Lightly</p>
+              <p>Editor in okodesign.net</p>
+              <img src="assets/person-1.png"
+                   class="person-img">
+            </div>
+
+            <div class="people-say-item people-2">
+              <img src="assets/quote-light-gray.png"
+                   class="center-quote">
+              <p>Attending a trade show can be a very effective method</p>
+              <p>of promoting your company and its products.</p>
+              <p>Hans Christen Anderson</p>
+              <p>Lead Designer in okodesign.net</p> 
+              <img src="assets/person-2.png"
+                   class="person-img">
+            </div>
+          </div>
+          
         </div>
 
         <div class="carousel-radio">
           <span>
-            <input id="0" type="radio" name="people-say-carousel">
+            <input id="0" type="radio" name="people-say-carousel" onclick="peopleSay.slide(0)">
             <label for="0"></label>
           </span>
           <span>
-            <input id="1" type="radio" name="people-say-carousel">
+            <input id="1" type="radio" name="people-say-carousel" onclick="peopleSay.slide(1)">
             <label for="1"></label>
           </span>
           <span>
-            <input id="2" type="radio" name="people-say-carousel">
+            <input id="2" type="radio" name="people-say-carousel" onclick="peopleSay.slide(2)">
             <label for="2"></label>
           </span>
         </div>
@@ -280,7 +338,17 @@
       </div>
     </div>
 
-    <div id="get-in-touch"></div>
+    <div id="get-in-touch">
+      <h3>Get in Touch</h3>
+      <form>
+        <input type="text" name="name" placeholder="Name*">
+        <input type="email" name="email" placeholder="Email*">
+        <textarea placeholder="Message"></textarea>
+        <input class="inline" type="checkbox" name="important">
+        <label class="inline" for="important">Most Urgent Question</label>
+        <button></button>
+      </form>
+    </div>
 
     <footer></footer>
 
