Font size adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
 
             <ul>
-              <li>Search</li>
+              <li><img src="assets/search.png"></li>
               <li>US</li>
             </ul>
           </div>
@@ -33,7 +33,7 @@
             <p>RESPONSIVE UI KIT</p>
             <h1>HOFMANN</h1>
             <h2>We're Bring It To The New Level</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p id="landing-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.</p>
@@ -64,7 +64,7 @@
                 <img class="data-circles" src="assets/circle-1.png">
               </li>
               <li class="results-col-title">TOTAL CONVERSION</li>
-              <li>The past few years have seen a dramatic change in the public perception of cosmetic surgery.</li>
+              <li class="results-col-text">The past few years have seen a dramatic change in the public perception of cosmetic surgery.</li>
             </ul>
           </li>
 
@@ -74,7 +74,7 @@
                 <img class="data-circles" src="assets/circle-2.png">
               </li>
               <li class="results-col-title">FREE DOWNLOADS</li>
-              <li>Can you imagine what we will be downloading in another twenty years?</li>
+              <li class="results-col-text">Can you imagine what we will be downloading in another twenty years?</li>
             </ul>
           </li>
 
@@ -85,7 +85,7 @@
                      src="assets/circle-3.png">
               </li>
               <li class="results-col-title">UNIQUE VISITORS</li>
-              <li>WordPress, the premier free open-source bloggin utility, has gone through several upgrades in its life.</li>
+              <li class="results-col-text">WordPress, the premier free open-source bloggin utility, has gone through several upgrades in its life.</li>
             </ul>
           </li>
         </ul>
@@ -129,7 +129,7 @@
 
             <div class="carousel client-text">
               <div class="text-white">
-                Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf moon cliche beard, tilde brunch celiac swag ramps kickstarter roof party. 
+                Tofu beard godard lumbersexual. Slow-carb subway tile dreamcatcher gentrify, cred poutine organic tousled hammock ethical. Squid fixie artisan, 3 wolf moon actually drinking vinegar hella. Before they sold out coloring book pop-up ugh taxidermy fingerstache. Pug 3 wolf.
               </div>
 
               <div class="client-info">
@@ -143,7 +143,7 @@
 
             <div class="carousel client-text">
               <div class="text-white">
-                Pig nulla cillum pastrami. Exercitation leberkas burgdoggen laboris shank ut shankle. Velit ground round bresaola, lorem enim pancetta burgdoggen sausage pork belly t-bone. Veniam t-bone short ribs ipsum shankle sirloin short loin eiusmod turducken venison elit ex mollit. Cow ex sed velit ut cupidatat boudin ea laboris.
+                Pig nulla cillum pastrami. Exercitation leberkas burgdoggen laboris shank ut shankle. Velit ground round bresaola, lorem enim pancetta burgdoggen sausage pork belly t-bone. Veniam t-bone short ribs ipsum shankle sirloin short loin eiusmod turducken venison elit ex mollit. Cow ex sed velit ut.
               </div>
 
               <div class="client-info">
@@ -180,7 +180,7 @@
               </li>
               <li class="results-col-title">APP MAINTENANCE</li>
               <li>by</li>
-              <li>Lida Morrison, Nettie Burke</li>
+              <li class="results-col-text">Lida Morrison, Nettie Burke</li>
               <li><button>REVIEW</button></li>
             </ul>
           </li>
@@ -192,7 +192,7 @@
               </li>
               <li class="results-col-title">FTA KEYS</li>
               <li>by</li>
-              <li>Ivan Alexander, Steven Soto, Clifford Hammond</li>
+              <li class="results-col-text">Ivan Alexander, Steven Soto, Clifford Hammond</li>
               <li><button>REVIEW</button></li>
             </ul>
           </li>
@@ -207,7 +207,7 @@
                 SMART WATCH
               </li>
               <li>by</li>
-              <li>Trevor James, Carl Stevenson</li>
+              <li class="results-col-text">Trevor James, Carl Stevenson</li>
               <li><button>REVIEW</button></li>
             </ul>
           </li>
@@ -220,7 +220,7 @@
               </li>
               <li class="results-col-title">WATCH APPS</li>
               <li>by</li>
-              <li>Glen Snyder, Andrew Goodwin, Lida Morrison</li>
+              <li class="results-col-text">Glen Snyder, Andrew Goodwin, Lida Morrison</li>
               <li><button>REVIEW</button></li>
             </ul>
           </li>
@@ -252,7 +252,7 @@
                    class="center-quote">
               <p>It is not because things are difficult that we do not dare;</p>
               <p>It is because we do not dare that they are difficult.</p>
-              <p>Mallerie Shirley</p>
+              <p class="people-name">Mallerie Shirley</p>
               <p>Editor in okodesign.net</p>
               <img src="assets/person-1.png"
                    class="person-img">
@@ -263,7 +263,7 @@
                    class="center-quote">
               <p>Attending a trade show can be a very effective method</p>
               <p>of promoting your company and its products.</p>
-              <p>Rachel Moreno</p>
+              <p class="people-name">Rachel Moreno</p>
               <p>Lead Designer in okodesign.net</p> 
               <img src="assets/person-2.png"
                    class="person-img">
@@ -276,7 +276,7 @@
                    class="center-quote">
               <p>It is not because things are difficult that we do not dare;</p>
               <p>It is because we do not dare that they are difficult.</p>
-              <p>Seneca the Younger</p>
+              <p class="people-name">Seneca the Younger</p>
               <p>Editor in okodesign.net</p>
               <img src="assets/person-1.png"
                    class="person-img">
@@ -287,7 +287,7 @@
                    class="center-quote">
               <p>Attending a trade show can be a very effective method</p>
               <p>of promoting your company and its products.</p>
-              <p>Alexander Hamilton</p>
+              <p class="people-name">Alexander Hamilton</p>
               <p>Lead Designer in okodesign.net</p> 
               <img src="assets/person-2.png"
                    class="person-img">
@@ -300,7 +300,7 @@
                    class="center-quote">
               <p>It is not because things are difficult that we do not dare;</p>
               <p>It is because we do not dare that they are difficult.</p>
-              <p>Heather Lightly</p>
+              <p class="people-name">Heather Lightly</p>
               <p>Editor in okodesign.net</p>
               <img src="assets/person-1.png"
                    class="person-img">
@@ -311,7 +311,7 @@
                    class="center-quote">
               <p>Attending a trade show can be a very effective method</p>
               <p>of promoting your company and its products.</p>
-              <p>Hans Christen Anderson</p>
+              <p class="people-name">Hans Christen Anderson</p>
               <p>Lead Designer in okodesign.net</p> 
               <img src="assets/person-2.png"
                    class="person-img">
@@ -348,9 +348,73 @@
         <label class="inline" for="important">Most Urgent Question</label>
         <button></button>
       </form>
+      <ul>
+        <li>2300 W Arbutus Dr, Citrus Springs, FL 34434, USA</li>
+        <li>contact@hofmannui.net</li>
+        <li>952-775-6021</li>
+      </ul>
     </div>
 
-    <footer></footer>
+    <footer>
+      <ul class="footer-wrapper">
+
+        <li class="footer-col-4">
+          <ul class="col-width">
+            <li class="footer-title">Company</li>
+            <li>News</li>
+            <li>Blog</li>
+            <li>Testimonials</li>
+            <li>About Us</li>
+            <li>Press Kit</li>
+            <li>Get In Touch</li>
+          </ul>
+        </li>
+
+        <li class="footer-col-4">
+          <ul class="col-width">
+            <li class="footer-title">Products</li>
+            <li>UI Kits</li>
+            <li>Icons</li>
+            <li>Wordpress Themes</li>
+            <li>Mockups</li>
+          </ul>
+        </li>
+
+        <li class="footer-col-4">
+          <ul class="col-width">
+            <li class="footer-title">Support</li>
+            <li>Community</li>
+            <li>Forum</li>
+            <li>Distributors</li>
+            <li>Privacy Policy</li>
+            <li>Terms of Use</li>
+          </ul>
+        </li>
+        
+        <li class="footer-col-4">
+          <ul class="col-width">
+            <li class="footer-title">Customers</li>
+            <li>Documentation</li>
+            <li>Tools</li>
+            <li>Downloads</li>
+            <li>Developer Center</li>
+          </ul>
+        </li>
+      </ul>
+
+      <div id="credits">
+        <p>&copy 2016 Hofmann UI Kit</p>
+        <p>Created by Goldenfox - okodesign.net</p>
+      </div>
+
+      <div id="social-wrapper">
+        <a href=""><img src="assets/linked-in.png"></a>
+        <a href=""><img src="assets/google-plus.png"></a>
+        <a href=""><img src="assets/twitter.png"></a>
+        <a href=""><img src="assets/facebook.png"></a>
+        <a href=""><img src="assets/instagram.png"></a>
+      </div>
+    </footer>
 
   </div> <!-- APP -->
 <!--   <script src="jQuery Source CDN"></script> -->
